css/src/_flowchart.scss
$fc-color: $light-blue !default;
$fc-bracket-width: 10px !default;
$fc-sm-space-y: 1.25rem !default;
$fc-md-space: 4rem !default;

@mixin small-item-with-border(){
	margin: $fc-sm-space-y auto;
	content: "";
	display: block;
}

.flowchart {
	$prototype-border-width: 1px;
	$prototype-border-type: dashed;
	$prototype-border-color: $fc-color;
	@include template-arrows($border-color: color, $bg-color: $dark-blue);
	&:not(.no-arrow) {
		@include arrow($bg-color: $dark-blue);
	}
	background-color: $dark-blue;
	color: #FFF;

	&.brackets {
		.flowchart-row.bottom .item {
			text-align: center;

			p {
				@include brackets($padding: rem-calc($fc-bracket-width, $fc-bracket-width + 6));
				@include template-brackets($color: color, $pref-color-key: contrast-color);
				@include flex;
				flex-flow: row wrap;
				align-items: center;
				justify-content: center;
				margin: 0 auto;

				span {
					flex: 0 0 100%;
					display: inline-block;
				}
			}
		}
	}

	@include breakpoint(small only) {
		padding: $fc-sm-space-y * 2 0;
		text-align: center;
		position: relative;

		.item {
			max-width: 500px;
			margin: {
				left: auto;
				right: auto;
			}
		}

		.flowchart-row {
			margin: 0 6%;

			&.top .item.h5 {
				width: 100%;
				font-size: 1.75rem;
			}
		}

		&:not(.brackets) {
			.flowchart-row.top .item:after {
				@include bordered(2px);
				@include small-item-with-border;
				width: 1px;
				height: 30px;
				border-width: 0 0 0 2px;
			}

			.flowchart-row.bottom .item ~ .item:before {
				@include bordered(2px);
				@include small-item-with-border;
				width: 60px;
				height: 1px;
				border-width: 2px 0 0;
			}
		}

		&.brackets {
			.flowchart-row.top .item {
				margin: {
					top: $fc-sm-space-y;
					bottom: $fc-sm-space-y * 2;
				}
			}

			.flowchart-row.bottom {
				.item ~ .item {
					@include bordered(2px);
					padding-top: $fc-sm-space-y;
					margin: $fc-sm-space-y 0;
					border-width: 2px 0 0;
				}

				& + .flowchart-row.bottom .item:first-child {
					@include bordered(2px);
					padding-top: $fc-sm-space-y;
					border-width: 2px 0 0;
				}
			}
		}

		.flowchart-row.bottom .item a {
			color: #FFF;
			font: {
				family: $header-font-family;
				size: 1.75rem;
			}
			line-height: 1em;
			text-transform: uppercase;
		}

		&.brackets .flowchart-row.bottom .item {
			p {
				width: 75%;
				min-width: 252px;
				height: 68px;
				margin-bottom: 0;
				font-size: 1.25rem;
				line-height: 1.2;

				span {
					flex: 0 0 100%;
					display: inline-block;
				}
			}
		}
	}

	@include breakpoint(medium up) {
		padding: 50px 0;

		.flowchart-row {
			text-align: center;
			margin: 0 8.5%;

			&.text {
				padding-top: 1.5rem;
				margin: 0 20%;
			}

			&.top {
				padding: $fc-md-space 0;
				margin-bottom: $fc-md-space / 4;
				position: relative;
				overflow: hidden;

				&:before {
					@include bordered;
					content: "";
					display: block;
					position: absolute;
					top: $fc-md-space;
					left: 10%;
					right: 10%;
					bottom: -2px;
					z-index: 1;
				}

				&:after {
					@include bordered;
					content: "";
					display: block;
					position: absolute;
					z-index: 1;
					top: $fc-md-space + ($fc-md-space / 4);
					left: 30%;
					right: 30%;
					bottom: -2px;
				}

				.item {
					$border-width: $fc-md-space / 4;
					@include absolute-center;
					@include bordered($border-width, solid, $dark-blue);
					width: 20%;
					z-index: 2;
					background: $dark-blue;

					&:after {
						@include bordered;
						content: "";
						display: block;
						position: absolute;
						z-index: 1;
						top: calc(100% + #{$border-width});
						left: calc(50% - 1px);
						width: 1px;
						height: 64px;
						border-width: 0 1px 0 0;
					}

					&.h5 {
						color: #FFF;
						text-transform: uppercase;
					}
				}

				&.count-3 .item.h5 {
					width: 40%;
				}
			}

			&.bottom {
				padding-bottom: 32px;

				.item {
					display: inline-block;
					vertical-align: top;
					padding: 0 1%;
				}
			}

			.item img {
				max-height: 50px;
			}
		}

		&:not(.brackets) .flowchart-row.bottom .item {
			width: 20%;

			p {
				margin-top: 10px;
			}
		}

		&.brackets .flowchart-row {

			&.top {
				&.count-3 {
					&:before {
						display: none;
					}

					&:after {
						left: 22%;
						right: 22%;
					}
				}
			}

			&.bottom {
				@include flex;
				flex-wrap: nowrap;
				justify-content: center;

				.item {
					&:nth-child(1){
						width: 19.25%;
					}
					&:nth-child(2){
						width: 21.25%;
					}
					&:nth-child(3){
						width: 19%;
					}
					&:nth-child(4){
						width: 21.25%;
					}
					&:nth-child(5){
						width: 19.25%;
					}

					p {
						font-size: 0.9rem;
						line-height: 1.2;
						height: 100%;
					}
				}

				&.count-3 {
					.item {
						width: 28%;
						padding: 0 7%;
					}
				}
			}
		}
	}

	&.brackets .flowchart-row {
		@include breakpoint(1000px down){
			&.text {
				margin: 0 10%;
			}
		}

		&.bottom.count-3 .item {
			@include breakpoint(935px down) {
				padding: 0 6%;
			}

			@include breakpoint(790px down) {
				padding: 0 5%;
			}
		}
	}

	@include breakpoint(865px down) {
		.flowchart-row {
			margin: 0 5%;

			&.top .item {
				width: 25%;
			}
		}

		&:not(.brackets) .flowchart-row.bottom .item {
			padding: 0 2%;
		}
	}
}

